<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="@dimen/activity_horizontal_margin">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#Suject"
            android:id="@+id/myProfileSybsystem"
            android:layout_marginBottom="@dimen/activity_vertical_margin_small"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subsystem_isCreate"
            android:id="@+id/myProfileIsCreate"
            android:layout_below="@+id/myProfileSybsystem"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#Last date"
            android:id="@+id/myProfileIsCreateValue"
            android:layout_alignParentRight="true" android:layout_alignBaseline="@+id/myProfileIsCreate"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subsystem_isRead"
            android:id="@+id/myProfileIsRead"
            android:layout_below="@+id/myProfileIsCreate"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#Last date"
            android:id="@+id/myProfileIsReadValue"
            android:layout_alignParentRight="true" android:layout_alignBaseline="@+id/myProfileIsRead"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subsystem_isUpdate"
            android:id="@+id/myProfileIsUpdate"
            android:layout_below="@+id/myProfileIsRead"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#Last date"
            android:id="@+id/myProfileIsUpdateValue"
            android:layout_alignParentRight="true" android:layout_alignBaseline="@+id/myProfileIsUpdate"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subsystem_isDelete"
            android:id="@+id/myProfileIsDelete"
            android:layout_below="@+id/myProfileIsUpdate"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#Last date"
            android:id="@+id/myProfileIsDeleteValue"
            android:layout_alignParentRight="true" android:layout_alignBaseline="@+id/myProfileIsDelete"/>




</RelativeLayout>